# RepTests

./: A.cs  B.cs  CMakeLists.txt  Directory.Build.props  NewBranchFile.txt  NewFile  NewFile2  Program.cs  RepTests.sln  ert45j.txt  eryry  gdrgr  jhg  mehmeh.meh
.github/workflows/: DevTestingWorkflow.yml  LinuxPublishingWorkflow.yml  MainTestingWorkflow.yml  PublishingWorkflow.yml  TestingWorkflow.yml  dotnet.yml
RepTestsConsole/: B.cs  C.cs  Program.cs  RepTestsConsole.csproj  packages.lock.json
SomeClassLibrary/: Nuget.config  ReadMe.md  SomeClass.cs  SomeClassLibrary.csproj  SomeNativeLibWrap.cs  UploadPackage.bat  packages.lock.json
SomeClassLibrary.Tests/: SomeClassLibrary.Tests.csproj  SomeClassTests.cs  packages.lock.json
SomeNativeLib/: CMakeLists.txt  SomeApi.cpp  SomeApi.h  SomeNativeLib.vcxproj  SomeNativeLib.vcxproj.filters  dllmain.cpp
